// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkFormValidation should render correctly 1`] = `
<DocumentFragment>
  <div
    style="height: auto; overflow: visible; transition: height 200ms ease;"
  >
    <div>
      <div
        class="bpk-form-validation__container"
      >
        <div
          class="bpk-form-validation bpk-form-validation--appear"
          id="my-form-validation"
        >
          <span
            style="line-height: 1rem; display: inline-block; margin-top: 0.125rem; vertical-align: top;"
          >
            <svg
              aria-hidden="true"
              class="bpk-form-validation__icon"
              height="16"
              style="width: 1rem; height: 1rem;"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 1.5A10.5 10.5 0 1022.5 12 10.5 10.5 0 0012 1.5zM12 18a1.5 1.5 0 111.5-1.5A1.5 1.5 0 0112 18zm1.5-6a1.5 1.5 0 01-3 0V7.5a1.5 1.5 0 013 0z"
              />
            </svg>
          </span>
          A validation message.
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkFormValidation should render correctly with "expanded" equal to false 1`] = `
<DocumentFragment>
  <div
    style="height: 0px; overflow: visible; transition: height 200ms ease;"
  >
    <div
      style="display: none;"
    >
      <div
        class="bpk-form-validation__container"
      >
        <div
          class="bpk-form-validation"
          id="my-form-validation"
        >
          <span
            style="line-height: 1rem; display: inline-block; margin-top: 0.125rem; vertical-align: top;"
          >
            <svg
              aria-hidden="true"
              class="bpk-form-validation__icon"
              height="16"
              style="width: 1rem; height: 1rem;"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 1.5A10.5 10.5 0 1022.5 12 10.5 10.5 0 0012 1.5zM12 18a1.5 1.5 0 111.5-1.5A1.5 1.5 0 0112 18zm1.5-6a1.5 1.5 0 01-3 0V7.5a1.5 1.5 0 013 0z"
              />
            </svg>
          </span>
          A validation message.
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
